# pipewatch

./: .gitignore  README.md  pyproject.toml
pipewatch/: aggregation.py  alert_config.py  alert_config_example.toml  alerting_rules.py  alerts.py  anomaly.py  baseline.py  baseline_example.json  bucketing.py  cli.py  cli_aggregation.py  cli_compression.py  cli_diffing.py  cli_forecasting.py  cli_heatmap.py  cli_partitioning.py  cli_rollup.py  cli_segmentation.py  cli_summarization.py  clustering.py  collector.py  compression.py  correlation.py  deduplication.py  diffing.py  display.py  display_aggregation.py  display_alerting_rules.py  display_anomaly.py  display_baseline.py  display_clustering.py  display_compression.py  display_correlation.py  display_diffing.py  display_eviction.py  display_forecasting.py  display_heatmap.py  display_interpolation.py  display_labeling.py  display_outlier.py  (+46 more)
tests/: test_aggregation.py  test_alert_config.py  test_alerting_rules.py  test_alerts.py  test_anomaly.py  test_baseline.py  test_bucketing.py  test_clustering.py  test_compression.py  test_correlation.py  test_deduplication.py  test_diffing.py  test_display_alerting_rules.py  test_display_diffing.py  test_display_forecasting.py  test_display_partitioning.py  test_display_segmentation.py  test_eviction.py  test_export.py  test_filter.py  test_forecasting.py  test_heatmap.py  test_history.py  test_interpolation.py  test_labeling.py  test_merging.py  test_metrics_collector.py  test_normalization.py  test_outlier.py  test_partitioning.py  test_pipeline.py  test_profiling_display.py  test_ranking.py  test_replay.py  test_report.py  test_retention.py  test_rollup.py  (+11 more)
